--- a/app/views/home/index.rhtml
+++ b/app/views/home/index.rhtml
@@ -1,3 +1,70 @@
-<%= link_to 'Create new medicine'%>
+<!DOCTYPE html>
+<html>
+	<style>
+body {
+    background-image: url("/images/life.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+ 
+ }
+ 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+   // border: 1px solid #555;
+}
 
-<%#= link_to 'Medicines', {:controller => 'home' ,:action => 'index'}%>
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li {
+    text-align: center;
+    border-bottom: 10px solid #ffffff;
+}
+
+li:last-child {
+    border: none;
+}
+
+li a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
+div.absolute {
+    position: absolute;
+    top: 400px;
+    right: 0;
+    width: 1760px;
+    height: 500px;
+  //  border: 3px solid #73AD21;
+}
+
+</style>
+</head>
+<body>
+  <div class="absolute">
+
+
+<ul>
+  <li><%= link_to 'Medicine', {:controller => 'medicines' ,:action => 'index'}%></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+</div>
+</body>
+</html>
